<resources>
    <string name="app_name">Weather App</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="search">Search</string>

    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="one">1</string>
    <string name="seven">7</string>
    <string name="sixteen">16</string>

    <string name="set_to_current_location">Set to current location</string>
    <string name="days_of_weather_forecast">Days of weather forecast</string>
    <string name="temperature">Temperature</string>

    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="daily_push_notification">Daily push notification</string>
    <string name="daily_push_notification_hint">Would you like to receive a daily push notification about todays upcoming weather?</string>
    <string name="clock_placeholder">8:00 am</string>
    <string name="reset_to_default_settings">Reset to default settings</string>
    <string name="settings_toast_current_location_set">Current location set</string>

</resources>
