<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88ffffff"
        android:orientation="vertical">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/back_arrow_left_white" />

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:text="@string/set_to_current_location"
                    android:textColor="@color/colorTextPrimary" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/location_grey" />
                </FrameLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/days_of_weather_forecast"
                    android:textColor="@color/colorTextPrimary" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:text="@string/minus"
                        android:textColor="@color/colorTextPrimaryDark" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:text="@string/seven"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextPrimaryDark" />

                    <Button
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:text="@string/plus"
                        android:textColor="@color/colorTextPrimaryDark" />

                </LinearLayout>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textColor="@color/colorTextPrimary" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/celsius"
                        android:textColor="@color/colorTextPrimary" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fahrenheit"
                        android:textColor="@color/colorTextPrimary" />

                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/daily_push_notification"
                        android:textColor="@color/colorTextPrimary"
                        android:layout_weight="3"/>

                    <Switch
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ViewFlipper
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/daily_push_notification_hint"
                            android:textColor="@color/colorTextPrimary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/clock_placeholder"
                            android:textColor="@color/colorTextPrimary" />

                    </ViewFlipper>

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorTextPrimaryLight"
            android:backgroundTint="@color/colorAlert"
            android:text="@string/reset_to_default_settings"/>

    </LinearLayout>
</RelativeLayout>